<resources>
    <string name="app_name">BLEChat_android</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_fragment_label">Main Fragment</string>
    <string name="permission_fragment_label">Permission Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="permissionDescription">Please enable bluetooth and location for the app.  Bluetooth is required for the chat.  Location is required for discovering other bluetooth devices.</string>
    <string name="bluetooth_enable_alert_title">Enable Bluetooth</string>
    <string name="bluetooth_enable_alert_desc">The app needs bluetooth for all of its functions.  Please enable bluetooth.</string>
    <string name="location_permission_alert_title">Grant Location Permission</string>
    <string name="location_permission_alert_desc">The app needs location permission to scan for bluetooth devices.  Please grant location permission.</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="device_text">Devices</string>
    <string name="scan_button">Scan Devices</string>
    <string name="connect_device_alert_title">Connect to Device</string>
    <string name="connect_device_alert_desc"></string>
    <string name="confirm_button">Confirm</string>
    <string name="send_button">Send</string>
    <string name="message_title">Enter a message: </string>
    <string name="start_server">Start Server</string>
    <string name="stop_server">Stop Server</string>
    <string name="incoming_connection_alert_title">Incoming Connection</string>
    <string name="incoming_connection_alert_desc"></string>
    <string name="accept_button">Accept</string>
    <string name="disconnection_alert_title">Disconnection</string>
    <string name="stay_in_chat_button">Stay in Chat View</string>
    <string name="back_to_device_list_button">Back to Device List</string>
    <string name="disconnect">Disconnect</string>
    <string name="messages_title">Messages</string>
    <string name="chat_records">Chat Records</string>
    <string name="channel_id">BLEChat_Notice</string>
    <string name="notification_description">new message!</string>
    <string name="channel_name">Chat Service</string>
    <string name="start_server_alert_title">Start Server</string>
    <string name="start_server_alert_desc">Do you want to start the chat server to listen to incoming connections?</string>
    <string name="start_button">Start</string>
    <string name="sent_logo">sent</string>
    <string name="start_notification">Turn on Notification</string>
    <string name="stop_notification">Turn off Notification</string>
    <string name="send_file_confirmation_alert_title">Send File Confirmation</string>
    <string name="send_file_confirmation_alert_desc"></string>
    <string name="send_file">Send a File</string>
    <string name="notification_alert_title">Notification State</string>
    <string name="home_page">Home Screen</string>
    <string name="select_device_page">Please select a device</string>
    <string name="chat_record">Chat Record</string>
    <string name="chat_view">Chat View</string>
    <string name="unknown_name">unknown</string>

</resources>