<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/PermissionFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="com.bitpunchlab.android.blechat_android.MainFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_MainFragment_to_PermissionFragment"
            app:destination="@id/PermissionFragment" />
        <action
            android:id="@+id/action_MainFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
        <action
            android:id="@+id/action_MainFragment_to_deviceSelectionFragment"
            app:destination="@id/deviceSelectionFragment" />
        <argument
            android:name="startFromNotification"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>
    <fragment
        android:id="@+id/PermissionFragment"
        android:name="com.bitpunchlab.android.blechat_android.PermissionFragment"
        android:label="@string/permission_fragment_label"
        tools:layout="@layout/fragment_permission">

        <action
            android:id="@+id/action_PermissionFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatFragment"
        android:name="com.bitpunchlab.android.blechat_android.chat.ChatFragment"
        android:label="@string/chat_view" >
        <argument
            android:name="isClient"
            app:argType="boolean"
            android:defaultValue="false" />
        <argument android:name="deviceName"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="deviceAddress"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/deviceSelectionFragment"
        android:name="com.bitpunchlab.android.blechat_android.chatRecords.DeviceSelectionFragment"
        android:label="@string/select_device_page" >
        <action
            android:id="@+id/action_deviceSelectionFragment_to_chatRecordFragment"
            app:destination="@id/chatRecordFragment" />
    </fragment>
    <fragment
        android:id="@+id/chatRecordFragment"
        android:name="com.bitpunchlab.android.blechat_android.chatRecords.ChatRecordFragment"
        android:label="@string/chat_record" >
        <argument
            android:name="deviceAddress"
            app:argType="string"
            app:nullable="true" />
    </fragment>
</navigation>